crates/compiler/tests/parse_errors/unexpected_symbol_decl.txt
-- UNEXPECTED SYMBOL ---------------------------------------------- src/Main.elm

I am getting stuck because this line starts with the @ symbol:

2| @ = 1
   ^
When a line has no spaces at the beginning, I expect it to be a declaration like
one of these:

    greet : String -> String
    greet name =
      "Hello " ++ name ++ "!"
    
    type User = Anonymous | LoggedIn String

If this is not supposed to be a declaration, try adding some spaces before it?

